Revise index.html for Civics Path support page
Updated the HTML structure and content for the Civics Path support and privacy policy page.

--- a/index.html
+++ b/index.html
@@ -1,39 +1,141 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1" />
-    <title>US Citizenship Test Prep - Master the USCIS Civics Test</title>
-    <meta name="description" content="Prepare for your US citizenship test with 100 official USCIS civics questions. Practice tests, study mode, and personalized learning to help you pass." />
-    <meta name="author" content="US Citizenship Test Prep" />
-    <meta name="keywords" content="US citizenship test, USCIS civics test, citizenship exam prep, naturalization test, civics questions" />
-    
-    <!-- Theme Color -->
-    <meta name="theme-color" content="#3B82F6" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Citizenship Prep" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Civics Path — Support & Privacy Policy</title>
+  <meta name="description" content="Support and Privacy Policy for Civics Path (US Citizenship Test Prep)." />
+  <style>
+    :root { color-scheme: light dark; }
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif; line-height: 1.6; margin: 0; }
+    header { padding: 28px 16px; border-bottom: 1px solid rgba(0,0,0,.12); }
+    main { max-width: 900px; margin: 0 auto; padding: 24px 16px 48px; }
+    h1 { font-size: 28px; margin: 0 0 6px; }
+    h2 { font-size: 20px; margin-top: 28px; }
+    h3 { font-size: 16px; margin-top: 18px; }
+    .muted { opacity: .8; }
+    .card { border: 1px solid rgba(0,0,0,.12); border-radius: 14px; padding: 14px 16px; margin: 14px 0; }
+    ul { margin: 8px 0 8px 18px; }
+    a { word-break: break-word; }
+    footer { border-top: 1px solid rgba(0,0,0,.12); padding: 18px 16px; }
+    code { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; }
+  </style>
+</head>
+<body>
+  <header>
+    <main style="padding:0 16px; max-width:900px;">
+      <h1>Civics Path — Support & Privacy Policy</h1>
+      <div class="muted">US Citizenship Test Prep • 2025 USCIS civics questions</div>
+    </main>
+  </header>
 
-    <!-- PWA Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/pwa-192x192.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/pwa-192x192.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <main>
+    <section class="card">
+      <h2>Support</h2>
+      <p>If you have questions, feedback, or need help, contact:</p>
+      <p><strong>Email:</strong> <a href="mailto:amappcreator@gmail.com">amappcreator@gmail.com</a></p>
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="US Citizenship Test Prep" />
-    <meta property="og:description" content="Master all 100 USCIS civics questions with practice tests and personalized learning." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+      <h3>Common Topics</h3>
+      <ul>
+        <li>App questions, study mode, practice tests</li>
+        <li>Audio support issues</li>
+        <li>Senior Mode (65/20) questions</li>
+        <li>State-specific answers</li>
+        <li>Bug reports and feature requests</li>
+      </ul>
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="US Citizenship Test Prep" />
-    <meta name="twitter:description" content="Master all 100 USCIS civics questions with practice tests and personalized learning." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+      <p class="muted">
+        Response time: typically within 1–3 business days.
+      </p>
+    </section>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <section class="card">
+      <h2>Disclaimer</h2>
+      <p>
+        Civics Path is <strong>not affiliated with, endorsed by, or sponsored by USCIS</strong>
+        or any U.S. government agency. Questions are based on publicly available official study
+        materials from <a href="https://www.uscis.gov/" rel="noopener noreferrer" target="_blank">uscis.gov</a>.
+      </p>
+    </section>
+
+    <section>
+      <h2>Privacy Policy</h2>
+      <p class="muted"><strong>Last updated:</strong>2026-01-25</p>
+
+      <h3>Summary</h3>
+      <p>
+        Civics Path is designed to help you study for the U.S. Citizenship (Naturalization) civics test.
+        We aim to minimize data collection. This policy explains what information may be processed and why.
+      </p>
+
+      <h3>Information We Collect</h3>
+      <p><strong>We do not knowingly collect</strong> sensitive personal data such as government IDs, SSNs, immigration status documents, or precise location.</p>
+      <ul>
+        <li><strong>User-provided information:</strong> If you email support, we receive the information you include (such as your email address and message).</li>
+        <li><strong>App data (on your device):</strong> Study progress, saved questions, and preferences may be stored locally on your device to provide core functionality.</li>
+      </ul>
+
+      <h3>Analytics</h3>
+      <p>
+        REPLACE_THIS_SECTION_BASED_ON_YOUR_APP:
+      </p>
+      <ul>
+         “We do not use third-party analytics SDKs."
+      </ul>
+
+      <h3>Advertising</h3>
+      <p>
+        This app is provided with <strong>no ads</strong>. We do not sell your personal information.
+      </p>
+
+      <h3>How We Use Information</h3>
+      <ul>
+        <li>Provide and improve app functionality (practice tests, study tools, audio support)</li>
+        <li>Respond to support requests</li>
+        <li>Fix bugs and improve performance</li>
+      </ul>
+
+      <h3>Data Sharing</h3>
+      <p>
+        We do not sell your personal information. We may share limited information only if required by law
+        or to protect rights, safety, and security.
+      </p>
+
+      <h3>Data Retention</h3>
+      <ul>
+        <li><strong>Local app data</strong> (progress, settings) remains on your device unless you delete the app or reset it.</li>
+        <li><strong>Support emails</strong> are retained as long as needed to respond and maintain support history.</li>
+      </ul>
+
+      <h3>Children’s Privacy</h3>
+      <p>
+        This app is intended for a general audience and is not directed to children under 13.
+        We do not knowingly collect personal information from children.
+      </p>
+
+      <h3>Your Choices</h3>
+      <ul>
+        <li>You can delete local app data by uninstalling the app.</li>
+        <li>You can contact us to request deletion of support emails you sent.</li>
+      </ul>
+
+      <h3>Contact</h3>
+      <p>
+        For privacy questions, contact:
+        <strong><a href="mailto:REPLACE_WITH_YOUR_SUPPORT_EMAIL">REPLACE_WITH_YOUR_SUPPORT_EMAIL</a></strong>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <main style="padding:0 16px; max-width:900px;">
+      <div class="muted">
+        © <span id="y"></span> Civics Path. All rights reserved.
+      </div>
+      <script>
+        document.getElementById("y").textContent = new Date().getFullYear();
+      </script>
+    </main>
+  </footer>
+</body>
 </html>
